[Mac] Activate notifications on mouse *up*.

Buttons respond on mouse up. This is nice because it gives the user a
chance to change their mind by moving the mouse away from the button
before releasing.

This makes notifications behave the same way.

BUG=653862

Review-Url: https://codereview.chromium.org/2400033003
Cr-Commit-Position: refs/heads/master@{#423877}