ui/message_center/cocoa/notification_controller.mm
@@ -185,12 +185,15 @@ FASTVC-BENCH-CORPUS:chromium-main-v1-943b94ae-1c74-4335-94fa-ceb4d277cea8
   return self;
 }
 
-- (void)mouseDown:(NSEvent*)event {
-  if ([event type] != NSLeftMouseDown) {
-    [super mouseDown:event];
+- (void)mouseUp:(NSEvent*)event {
+  if (event.type != NSLeftMouseUp) {
+    [super mouseUp:event];
     return;
   }
-  [controller_ notificationClicked];
+  if (NSPointInRect([self convertPoint:event.locationInWindow fromView:nil],
+                    self.bounds)) {
+    [controller_ notificationClicked];
+  }
 }
 
 - (NSView*)hitTest:(NSPoint)point {
